nenolod     2006/10/20 18:32:36 UTC	(20061020-6717)
  Log:
  - remove unused struct myaccessmask_
  

  Changes:	Modified:
  +0 -7		trunk/include/account.h (File Modified) 


nenolod     2006/10/20 18:31:20 UTC	(20061020-6715)
  Log:
  - framework for /ns access and related commands (+openservices patch)
  

  Changes:	Modified:
  +16 -0	trunk/include/account.h (File Modified) 
  +115 -0	trunk/src/account.c (File Modified) 
  +8 -0		trunk/src/services.c (File Modified) 


nenolod     2006/10/20 18:16:35 UTC	(20061020-6713)
  Log:
  - sorservices-compatible encryption support (+openservices patch)
  

  Changes:	Modified:
  +1 -1		trunk/crypto/Makefile.in (File Modified) 
  +341 -0	trunk/crypto/sorservices.c (File Added) 


nenolod     2006/10/20 18:05:20 UTC	(20061020-6711)
  Log:
  - break out some (not all yet) account-related functions into account.c
  

  Changes:	Modified:
  +2 -0		trunk/include/account.h (File Modified) 
  +1 -0		trunk/src/Makefile.in (File Modified) 
  +305 -0	trunk/src/account.c (File Added) 
  +1 -203	trunk/src/node.c (File Modified) 


nenolod     2006/10/20 17:41:09 UTC	(20061020-6709)
  Log:
  - remove error codes from command_fail() output on IRC
  

  Changes:	Modified:
  +1 -4		trunk/src/services.c (File Modified) 


jilles      2006/10/20 17:11:00 UTC	(20061020-6707)
  Log:
  Add back flood checking on fantasy commands.
  

  Changes:	Modified:
  +2 -0		trunk/modules/chanserv/main.c (File Modified) 


jilles      2006/10/20 17:09:17 UTC	(20061020-6705)
  Log:
  Only try a fantasy command if the first character of the
  "command" (after '!') is a letter.
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/main.c (File Modified) 


jilles      2006/10/20 16:40:26 UTC	(20061020-6703)
  Log:
  Make /cs invite command description reflect that you
  can only invite yourself, not others.
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/invite.c (File Modified) 


jilles      2006/10/20 16:38:40 UTC	(20061020-6701)
  Log: