@@ -1,3 +1,12 @@
+nenolod     2006/10/20 18:35:41 UTC	(20061020-6719)
+  Log:
+  - missed a spot
+  
+
+  Changes:	Modified:
+  +1 -1		trunk/src/services.c (File Modified) 
+
+
 nenolod     2006/10/20 18:32:36 UTC	(20061020-6717)
   Log:
   - remove unused struct myaccessmask_
